Session-5-6-HW/vpc.tf
resource "aws_vpc" "my_vpc" {
    cidr_block = var.vpc_cidr

    tags = {
      Name = "my-vpc-hw5"
    }
}
